# rippaa-ai-data-platform

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/synthetic/: manifest.json
data/synthetic/enterprise/: hr_policy_anti_discrimination_meridian_data_services_042.txt  hr_policy_anti_discrimination_meridian_data_services_042.txt.meta.json  hr_policy_code_of_conduct_austech_solutions_045.txt  hr_policy_code_of_conduct_austech_solutions_045.txt.meta.json  hr_policy_code_of_conduct_nexus_technologies_047.txt  hr_policy_code_of_conduct_nexus_technologies_047.txt.meta.json  hr_policy_onboarding_meridian_data_services_046.txt  hr_policy_onboarding_meridian_data_services_046.txt.meta.json  hr_policy_onboarding_nexus_technologies_044.txt  hr_policy_onboarding_nexus_technologies_044.txt.meta.json  hr_policy_remote_work_austech_solutions_043.txt  hr_policy_remote_work_austech_solutions_043.txt.meta.json  security_assessment_austech_solutions_202603_050.json  security_assessment_austech_solutions_202603_050.json.meta.json  (+8 more)
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  RUNBOOK.md
docs/adr/: 001-pgvector-over-pinecone.md  002-kafka-over-sqs.md  007-hybrid-search-strategy.md  008-agent-tool-use-pattern.md  009-chunking-strategy.md  010-pii-detection-approach.md  011-serving-layer.md  adr-003-pyspark-over-pandas.md  adr-004-claude-bedrock-over-openai.md
docs/diagrams/: c4-level1-context.md  c4-level2-container.md  c4-level3-agents.md  c4-level3-processing.md
infrastructure/docker/: docker-compose.yml  init-db.sql  prometheus.yml
infrastructure/terraform/: main.tf
scripts/: ingest_documents.py  process_documents.py  query.py  run_demo.py  seed_data.py
src/agents/: llm_client.py  orchestrator.py  quality_agent.py  query_agent.py  retrieval_agent.py  synthesis_agent.py
src/api/: main.py
src/ingestion/: kafka_producer.py  s3_client.py  service.py
src/processing/: chunker.py  consumer.py  embedder.py  parser.py  pii_detector.py  pipeline.py
src/shared/: config.py  database.py  models.py
tests/unit/: test_agents.py  test_config.py  test_models.py  test_parser.py  test_processing.py
(+83 files in other folders)
