[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rippaa-ai-data-platform"
version = "0.1.0"
description = "Production-grade AI data platform with RAG & agentic workflows on AWS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Rayan Noronha", email = "rayan@rippaa.com"},
]
keywords = ["data-engineering", "rag", "ai-agents", "aws", "kafka", "pyspark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "confluent-kafka>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.5",
    "sqlalchemy>=2.0.35",
    "boto3>=1.35.0",
    "anthropic>=0.39.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.3",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "faker>=30.8.0",
]

[project.urls]
Homepage = "https://rippaa.com"
Repository = "https://github.com/rayan-noronha/rippaa-ai-data-platform"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
